[package]
name = "jiff-cron"
version = "0.1.0"
authors = [
    "Max Countryman <hello@maxcountryman.com>",
    "Zack Slayton <zack.slayton@gmail.com>",
]
repository = "https://github.com/maxcountryman/jiff-cron"
documentation = "https://docs.rs/jiff-cron"
readme = "README.md"
description = "A cron expression parser and schedule explorer built with jiff."
keywords = ["cron", "schedule", "repeat", "periodic", "time"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
jiff = "0.1"
nom = "~7"
once_cell = "1.10"
